Fixed issue with scrollbar when displaying blueprints

--- a/rook/static/css/style.css
+++ b/rook/static/css/style.css
@@ -160,7 +160,7 @@ body {
 }
 #spec_list {
   position: absolute;
-  top: 230px;
+  top: 250px;
   bottom: 0px;
 }
 
